[package]
name = "temporal_city"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
fs-err = "2.9.0"
opening-hours = "0.6.15"
osmpbf = "0.3.1"
serde = { version = "1.0.188", features = ["derive"] }
